--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "~4.16.1",
     "fullpage.js": "^4.0.8",
     "http-errors": "~1.6.3",
+    "just-validate": "^4.2.0",
     "locomotive-scroll": "^4.1.4",
     "morgan": "~1.9.1",
     "twig": "~0.10.3"
