--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.3.3",
     "babel-loader": "^8.2.5",
     "browser-sync": "^2.27.5",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.8",
     "del": "^6.0.0",
@@ -46,6 +47,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "helmet": "^6.0.1",
     "nodemon": "^2.0.16",
     "sass": "^1.38.1",
     "webpack": "^5.72.1",
