--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "fullpage.js": "^4.0.8",
+    "googleapis": "^113.0.0",
     "http-errors": "~1.6.3",
     "just-validate": "^4.2.0",
     "locomotive-scroll": "^4.1.4",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1",
     "twig": "~0.10.3"
   },
   "devDependencies": {
