--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-critical-css": "^1.0.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-postcss": "^9.0.0",
     "gulp-purgecss": "^4.0.3",
