--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "sweetalert2": "^11.7.3",
     "twig": "~0.10.3"
   },
   "devDependencies": {
